from version 0.10.5 to 0.10.6
- using events sync to validate connections and pass down housekeeping clock.

from version 0.10.4 to 0.10.5
- more consistent paths in cmake.

from version 0.10.3 to 0.10.4
- small fix for cmake from gahr.

from version 0.10.2 to 0.10.3
- some cross-platform portability fixes.

from version 0.10.1 to 0.10.2
- some reorganization of sources and common process code.

from version 0.10.0 to 0.10.1
- events dispatch ipc service added
- new --desktop server mode, but will require new ucommon (4.1.6 or later)
- minimized linkage where we do not require sipwitch runtime
- some cleanup of utils for error handling and recent ucommon changes.
- consolidated siprealm and sipdigest into "sipwitch" control app.
- cleanup and expansion of cmake support.

from version 0.9.3 to 0.10.0
- use of digest functions from usecure.
- notify removed, will be part of new switchview gui.
- cmake build added.

from version 0.9.2 to 0.9.3
- use gethostname for default domain name if not otherwise set.
- patch for sdp proxy parsing from rossell.

From version 0.9.1 to 0.9.2
- trap aborts and exits to kill fifo and treat "0.0.0.0" as NULL (Bug: #4).
- add contact: and expires param to registration (Bug: #5).
- enabled eXosip2 tls support and config options.

From version 0.9.0 to 0.9.1
- fix for unit test

From version 0.8.4 to 0.9.0
- uses ucommon 3.3.4 or later
- error logging uses ucommon
- some internationalization work

From version 0.8.3 to 0.8.4
- some minor adjustments to assure prack events
- better detection of unresolvable request uri's

From version 0.8.2 to 0.8.3
- new server messages to drop calls and notify interface state changes
- publish domain routing in zeroconf for future automatic route detection
- network up and down scripting to notify sipwitch on network changes

From version 0.8.1 to 0.8.2
- now requires ucommon 2.1.3 or later

From version 0.8.0 to 0.8.1
- code cleanup and opensolaris support
- now requires ucommon 2.1.2 or later
